bug fix: chat overflow UI

--- a/static/styles/landingPage/css/main.css
+++ b/static/styles/landingPage/css/main.css
@@ -13,6 +13,10 @@ body {
 	background-color: black;
 }
 
+.bodyGrey{
+	background-color: grey
+}
+
 .chatDark {
 	background-color: grey;
 	flex-grow: 1;
@@ -20,6 +24,14 @@ body {
 	border-radius: 10px;
 }
 
+/* #theme-frame {
+	background-color: white;
+	flex-grow: 1;
+	flex-direction: column;
+	border-radius: 10px;
+} */
+
+/* problem seems to be here */
 #page {
 	position: relative;
 	margin: 0px;
